--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/server_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.GameNameListController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/gameNameList_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.GameNameListController">
     <children>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
@@ -41,7 +40,7 @@
                         <Insets bottom="60.0" />
                     </VBox.margin>
                 </VBox>
-                <Label prefHeight="67.0" prefWidth="464.0" text="Insert the game you want to join " textFill="WHITE">
+                <Label alignment="CENTER" prefHeight="67.0" prefWidth="588.0" text="Insert the game you want to join " textFill="WHITE">
                     <font>
                         <Font name="Libian SC Regular" size="36.0" />
                     </font>
@@ -49,19 +48,11 @@
                         <Insets bottom="20.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="GameNameTextField" alignment="CENTER" maxHeight="500.0" maxWidth="500.0" prefHeight="49.0" prefWidth="500.0" promptText="Insert the name of  the game" styleClass="rounded-input" stylesheets="@../css/server_scene.css">
-                    <VBox.margin>
-                        <Insets bottom="20.0" />
-                    </VBox.margin>
-                    <font>
-                        <Font size="21.0" />
-                    </font>
-                </TextField>
-                <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#GameNameChosen" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
-                    <font>
-                        <Font size="28.0" />
-                    </font>
-                </Button>
+            <ScrollPane fx:id="scrollPane" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="249.0" prefWidth="418.0" style="-fx-background-color: transparent;;">
+               <content>
+                  <VBox fx:id="games" prefHeight="307.0" prefWidth="396.0" style="-fx-background-color: transparent;;" />
+               </content>
+            </ScrollPane>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
                   <Label fx:id="InvalidGameChoice" alignment="CENTER" contentDisplay="RIGHT" prefHeight="36.0" prefWidth="890.0" text="There is no  available game in  the lobby with this name, please insert another name" textFill="#d73d3d" visible="false">
