--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/computeScore_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/computeScore_scene.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.ComputeScoreController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -21,12 +21,12 @@
                   <Image url="@../boards/bookshelf.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="111.0" fitWidth="195.0" layoutX="663.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="commonGoalCard1" fitHeight="111.0" fitWidth="195.0" layoutX="663.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../common%20goal%20cards/6.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="112.0" fitWidth="167.0" layoutX="672.0" layoutY="313.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="commonGoalCard2" fitHeight="112.0" fitWidth="167.0" layoutX="672.0" layoutY="313.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../common%20goal%20cards/8.jpg" />
                </image>
@@ -82,7 +82,7 @@
                   <Image url="@../scoring%20tokens/scoring_2.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="106.0" fitWidth="98.0" layoutX="742.0" layoutY="457.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="endGameToken" fitHeight="106.0" fitWidth="98.0" layoutX="742.0" layoutY="457.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../scoring%20tokens/end%20game.jpg" />
                </image>
@@ -97,7 +97,7 @@
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
             </Button>
-            <ImageView fitHeight="113.0" fitWidth="91.0" layoutX="751.0" layoutY="592.0">
+            <ImageView fx:id="personalGoalCard" fitHeight="113.0" fitWidth="91.0" layoutX="751.0" layoutY="592.0">
                <image>
                   <Image url="@../personal%20goal%20cards/Personal_Goals6.png" />
                </image>
@@ -107,12 +107,12 @@
                   <Image url="@../misc/checkmark.png" />
                </image>
             </ImageView>
-            <Label fx:id="secondcg_points" layoutX="1312.0" layoutY="322.0" text="=X points " textFill="#fffdfd">
+            <Label fx:id="commonPoint2" layoutX="1312.0" layoutY="322.0" text="=X points " textFill="#fffdfd">
                <font>
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
             </Label>
-            <Label fx:id="Onecg_points" layoutX="1304.0" layoutY="172.0" text="= X points" textFill="#f8f5f5">
+            <Label fx:id="commonPoint1" layoutX="1304.0" layoutY="172.0" text="= X points" textFill="#f8f5f5">
                <font>
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
@@ -122,12 +122,12 @@
                   <Font size="36.0" />
                </font>
             </Label>
-            <Label fx:id="personagc_points" layoutX="1314.0" layoutY="606.0" prefHeight="33.0" prefWidth="203.0" text="=X points " textFill="WHITE">
+            <Label fx:id="personalGoalPoint" layoutX="1314.0" layoutY="606.0" prefHeight="33.0" prefWidth="203.0" text="=X points " textFill="WHITE">
                <font>
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
             </Label>
-            <Label fx:id="endgame_point" layoutX="1321.0" layoutY="476.0" text="=1 point " textFill="#fffdfd">
+            <Label fx:id="endGamePoint" layoutX="1321.0" layoutY="476.0" text="=1 point " textFill="#fffdfd">
                <font>
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
@@ -147,13 +147,13 @@
                   <Font size="36.0" />
                </font>
             </Label>
-            <Label fx:id="general_points" layoutX="1306.0" layoutY="722.0" prefHeight="33.0" prefWidth="203.0" text="=X points " textFill="WHITE">
+            <Label fx:id="generalPoint" layoutX="1306.0" layoutY="722.0" prefHeight="33.0" prefWidth="203.0" text="=X points " textFill="WHITE">
                <font>
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
             </Label>
             <Line endX="687.0" endY="1.220703125E-4" layoutX="831.0" layoutY="818.0" startX="-258.44573974609375" startY="1.220703125E-4" stroke="#fff9f9" />
-            <Label fx:id="totalscore" layoutX="1317.0" layoutY="831.0" prefHeight="33.0" prefWidth="203.0" text="=X points " textFill="WHITE">
+            <Label fx:id="totalScore" layoutX="1317.0" layoutY="831.0" prefHeight="33.0" prefWidth="203.0" text="=X points " textFill="WHITE">
                <font>
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
@@ -209,7 +209,7 @@
                </children>
             </StackPane>
             <AnchorPane layoutX="104.0" layoutY="555.0" prefHeight="44.0" prefWidth="56.0" />
-            <GridPane gridLinesVisible="true" hgap="11.1" layoutX="93.0" layoutY="210.0" prefHeight="405.0" prefWidth="396.0" vgap="11.1">
+            <GridPane fx:id="otherBookshelf" gridLinesVisible="true" hgap="11.1" layoutX="93.0" layoutY="210.0" prefHeight="405.0" prefWidth="396.0" vgap="11.1">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.0" minWidth="10.0" prefWidth="65.1842041015625" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="65.1842041015625" />
