--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/computeScore_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/computeScore_scene.fxml
@@ -209,7 +209,7 @@
                </children>
             </StackPane>
             <AnchorPane layoutX="104.0" layoutY="555.0" prefHeight="44.0" prefWidth="56.0" />
-            <GridPane fx:id="otherBookshelf" gridLinesVisible="true" hgap="11.1" layoutX="93.0" layoutY="210.0" prefHeight="405.0" prefWidth="396.0" vgap="11.1">
+            <GridPane fx:id="bookshelf" gridLinesVisible="true" hgap="11.1" layoutX="93.0" layoutY="210.0" prefHeight="405.0" prefWidth="396.0" vgap="11.1">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.0" minWidth="10.0" prefWidth="65.1842041015625" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="65.1842041015625" />
