--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -26,7 +26,7 @@
                     <children>
                         <AnchorPane layoutX="-20.0" prefHeight="656.0" prefWidth="638.0" styleClass="Board" stylesheets="@../css/livingBoard_scene.css">
                             <children>
-                                <GridPane fx:id="board" gridLinesVisible="false" hgap="4.27" layoutX="15.0" layoutY="26.0" prefHeight="630.0" prefWidth="622.0" vgap="4.27">
+                                <GridPane fx:id="board" hgap="7.27" layoutX="15.0" layoutY="26.0" prefHeight="630.0" prefWidth="622.0" vgap="4.27">
                                     <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
@@ -50,7 +50,7 @@
                                         <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
                                     <padding>
-                                        <Insets bottom="32.0" left="9.0" right="27.0" top="5.0" />
+                                        <Insets bottom="32.0" left="12.0" right="31.0" top="5.0" />
                                     </padding>
                                 </GridPane>
                                 <StackPane layoutX="517.0" layoutY="460.0" prefHeight="61.0" prefWidth="64.0" rotate="7.6">
@@ -98,20 +98,7 @@
                                                 <Point3D z="-1.0" />
                                             </rotationAxis>
                                             <children>
-                                                <ImageView fx:id="First_2" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
-                                                    <image>
-                                                        <Image url="@../scoring%20tokens/scoring_2.jpg" />
-                                                    </image></ImageView>
-                                                <ImageView fx:id="First_4" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
-                                                    <image>
-                                                        <Image url="@../scoring%20tokens/scoring_4.jpg" />
-                                                    </image>
-                                                </ImageView>
-                                                <ImageView fx:id="First_6" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true" rotate="-90.0" />
-                                                <ImageView fx:id="First_8" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
-                                                    <image>
-                                                        <Image url="@../scoring%20tokens/scoring_8.jpg" />
-                                                    </image></ImageView>
+                                                <ImageView fx:id="tokenCommonCard1" fitHeight="67.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0" />
                                             </children>
                                         </StackPane>
                                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="19.0" prefHeight="35.0" prefWidth="285.0" text="Common Goal Cards" textFill="#fffdfd">
@@ -134,26 +121,7 @@
                                         </ImageView>
                                         <StackPane layoutX="222.0" layoutY="47.0" prefHeight="67.0" prefWidth="67.0" rotate="-7.6">
                                             <children>
-                                                <ImageView fx:id="Second_2" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@../scoring%20tokens/scoring_2.jpg" />
-                                                    </image>
-                                                </ImageView>
-                                                <ImageView fx:id="Second_4" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@../scoring%20tokens/scoring_4.jpg" />
-                                                    </image>
-                                                </ImageView>
-                                                <ImageView fx:id="Second_6" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@../scoring%20tokens/scoring_6.jpg" />
-                                                    </image>
-                                                </ImageView>
-                                                <ImageView fx:id="Second_8" fitHeight="67.0" fitWidth="67.0" onMouseClicked="#scoringTokenClicked" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@../scoring%20tokens/scoring_8.jpg" />
-                                                    </image>
-                                                </ImageView>
+                                                <ImageView fx:id="tokenCommonCard2" fitHeight="67.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true" />
                                             </children>
                                         </StackPane>
                                     </children>
@@ -207,7 +175,7 @@
                                             <Image url="@../itemtiles/Piante1.1.png" />
                                         </image>
                                     </ImageView>
-                                    <ImageView fitHeight="68.0" fitWidth="71.0" layoutX="218.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fitHeight="69.0" fitWidth="70.0" layoutX="218.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                                         <image>
                                             <Image url="@../itemtiles/Gatti1.3.png" />
                                         </image>
@@ -266,6 +234,9 @@
                                         <Image url="@../personal%20goal%20cards/Personal_Goals3.png" />
                                     </image>
                                 </ImageView>
+                        <ImageView fx:id="tokenCommonGoalCard1" fitHeight="67.0" fitWidth="67.0" layoutX="93.0" layoutY="518.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="tokenCommonGoalCard2" fitHeight="67.0" fitWidth="67.0" layoutX="93.0" layoutY="596.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="seatToken" fitHeight="67.0" fitWidth="67.0" layoutX="93.0" layoutY="685.0" pickOnBounds="true" preserveRatio="true" />
                             </children>
                         </AnchorPane>
                     </children>
