--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -12,9 +12,14 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -62,18 +67,73 @@
                                         </ImageView>
                                     </children>
                                 </StackPane>
-                                <AnchorPane layoutX="12.0" layoutY="107.0" prefHeight="446.0" prefWidth="597.0" visible="false">
+                                <AnchorPane fx:id="anchorPaneForTheCandPGoalCards" layoutX="12.0" layoutY="105.0" prefHeight="453.0" prefWidth="609.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css">
                                     <children>
-                                        <ImageView fitHeight="431.0" fitWidth="499.0" layoutX="69.0" layoutY="-10.0">
+                                        <ImageView fitHeight="431.0" fitWidth="499.0" layoutX="69.0" layoutY="-10.0" visible="false">
                                             <image>
                                                 <Image url="@../scoring%20tokens/scoring_back_EMPTY.jpg" />
                                             </image>
                                         </ImageView>
-                                        <Text fill="#e8c77acf" layoutX="158.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations you have reached the first/second common goal! You will now receive a scoring token.. Keep it up!" wrappingWidth="344.74981689453125">
+                                        <Text fill="#e8c77acf" layoutX="158.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations you have reached the first/second common goal! You will now receive a scoring token.. Keep it up!" visible="false" wrappingWidth="344.74981689453125">
                                             <font>
                                                 <Font name="Libian SC Regular" size="36.0" />
                                             </font>
                                         </Text>
+                              <Line endX="-0.5" endY="260.00006103515625" layoutX="298.0" layoutY="194.0" startX="-0.5" startY="-194.0" stroke="WHITE" />
+                              <ImageView fx:id="firstCommonGC" fitHeight="150.0" fitWidth="200.0" layoutX="56.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="SeconCommonGC" fitHeight="150.0" fitWidth="200.0" layoutX="367.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true" />
+                              <Text layoutX="35.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First common goal card" wrappingWidth="235.64364624023438">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                                 <fill>
+                                    <RadialGradient centerX="0.5" centerY="0.5617577197149644" focusAngle="142.13" radius="0.5">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="0.7763158082962036" green="0.6965277791023254" blue="0.3773757219314575" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="0.9746666550636292" blue="0.6200000047683716" opacity="0.9923518300056458" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </RadialGradient>
+                                 </fill>
+                              </Text>
+                              <Text layoutX="321.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Second common goal card" wrappingWidth="276.0444641113281">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                                 <fill>
+                                    <RadialGradient centerX="0.4113573407202216" centerY="0.6947743467933492" focusAngle="-66.25" radius="0.5">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="0.7763158082962036" green="0.6965277791023254" blue="0.3773757219314575" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="0.9752305150032043" blue="0.6200000047683716" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </RadialGradient>
+                                 </fill>
+                              </Text>
+                              <Text fx:id="Description_1GC" fill="WHITE" layoutX="6.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="291.9645080566406">
+                                 <font>
+                                    <Font name="Libian SC Regular" size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="Description_2GC" fill="#f5f4f4" layoutX="310.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="294.84722900390625">
+                                 <font>
+                                    <Font name="Libian SC Regular" size="20.0" />
+                                 </font>
+                              </Text>
                                     </children>
                                 </AnchorPane>
                             </children>
@@ -167,7 +227,7 @@
             <right>
                 <HBox prefHeight="507.0" prefWidth="466.0" BorderPane.alignment="CENTER">
                     <children>
-                        <AnchorPane prefHeight="787.0" prefWidth="495.0">
+                        <AnchorPane prefHeight="787.0" prefWidth="466.0">
                             <children>
                                 <Group fx:id="tilePack" layoutX="-2.0" layoutY="-30.0">
                                     <ImageView fitHeight="69.0" fitWidth="70.0" layoutX="150.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
@@ -243,12 +303,25 @@
                 </HBox>
             </right>
             <top>
-                <Label fx:id="OtherPlayerTurnLabel" alignment="TOP_LEFT" textFill="#f5f2f2" visible="false" BorderPane.alignment="CENTER">
+                <Label fx:id="OtherPlayerTurnLabel" alignment="TOP_LEFT" prefHeight="70.0" prefWidth="600.0" textFill="#f5f2f2" visible="false" BorderPane.alignment="BOTTOM_CENTER">
                     <font>
                         <Font name="Libian SC Regular" size="36.0" />
                     </font>
                 </Label>
             </top>
         </BorderPane>
+      <AnchorPane fx:id="PaneForPopup" prefHeight="823.0" prefWidth="1437.0" visible="false">
+         <children>
+            <Pane layoutX="334.0" layoutY="318.0" prefHeight="83.0" prefWidth="796.0" styleClass="popup">
+               <children>
+                  <Text fx:id="textforPopUp" fill="WHITE" layoutX="176.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="507.4582214355469">
+                     <font>
+                        <Font size="72.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+         </children>
+      </AnchorPane>
     </children>
 </StackPane>
