--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard_scene.css
@@ -24,6 +24,16 @@
 
 }
 
+.popup {
+    -fx-background-image: url("../misc/base_pagina2.jpg");
+
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-radius: 0;
+    -fx-border-radius: 15px;
+    -fx-background-color: transparent;
+}
+
 #column {
     -fx-background-image:none;
     -fx-background-color: transparent;
