--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -134,6 +135,20 @@
                                     <Font name="Libian SC Regular" size="20.0" />
                                  </font>
                               </Text>
+                              <AnchorPane fx:id="AnchorPaneForCG" layoutX="-2.0" layoutY="-2.0" prefHeight="467.0" prefWidth="612.0" visible="false">
+                                 <children>
+                                              <ImageView fx:id="CommonGoalAchieved" fitHeight="352.0" fitWidth="367.0" layoutX="120.0" layoutY="59.0" visible="false">
+                                                  <image>
+                                                      <Image url="@../scoring%20tokens/scoring_back_EMPTY.jpg" />
+                                                  </image>
+                                              </ImageView>
+                                              <Text fx:id="CommonGoalText" fill="#e8c77acf" layoutX="152.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations you have reached the first/second common goal! You will now receive a scoring token.. Keep it up!" visible="false" wrappingWidth="318.74981689453125">
+                                                  <font>
+                                                      <Font name="Libian SC Regular" size="36.0" />
+                                                  </font>
+                                              </Text>
+                                 </children>
+                              </AnchorPane>
                                     </children>
                                 </AnchorPane>
                             </children>
